<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.media.MediaActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@id/cameraButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_image_24" />

    <EditText
        android:id="@+id/et_desc"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:ems="10"
        android:focusable="false"
        android:gravity="left|top"
        android:hint="@string/deskripsi"
        android:inputType="textMultiLine"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@id/uploadButton"
        android:textSize="15sp"
        tools:ignore="RtlHardcoded">
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/cameraButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/bgbtncamera"
        android:text="@string/camera"
        app:layout_constraintTop_toTopOf="@+id/et_desc"
        app:layout_constraintEnd_toStartOf="@+id/galleryButton"
        app:layout_constraintBottom_toBottomOf="@+id/previewImageView"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/galleryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:elevation="2dp"
        android:scaleType="fitCenter"
        android:textColor="@color/white"
        android:backgroundTint="@color/bgbtngallery"
        android:layout_marginEnd="8dp"
        android:text="@string/gallery"
        app:layout_constraintBottom_toBottomOf="@+id/previewImageView"
        app:layout_constraintTop_toTopOf="@+id/et_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cameraButton"
        />

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/bgbtnpost"
        android:text="@string/post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
